{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 280,
  "lineage": "809c7e0d-020a-3c39-fe93-9e836230ca9c",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:loadbalancer/app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab",
            "arn_suffix": "app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nurlan-yagublu-dev-alb-668326209.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:loadbalancer/app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nurlan-yagublu-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-004474a7b1b889481"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-082d4f58bbdd5bee4"
              },
              {
                "subnet_id": "subnet-098a63593f409e4c7"
              }
            ],
            "subnets": [
              "subnet-082d4f58bbdd5bee4",
              "subnet-098a63593f409e4c7"
            ],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-alb",
              "Project": "nurlan-yagublu",
              "Type": "ApplicationLoadBalancer",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-alb",
              "Project": "nurlan-yagublu",
              "Type": "ApplicationLoadBalancer",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc_id": "vpc-070cab3b44e064fa9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener/app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab/7bc79f1ac6e58c64",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener/app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab/7bc79f1ac6e58c64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:loadbalancer/app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-alb-listener-http",
              "Project": "nurlan-yagublu",
              "Type": "ALBListener",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-alb-listener-http",
              "Project": "nurlan-yagublu",
              "Type": "ALBListener",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.app",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener/app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab/c8782bc4a0b87ad8",
            "certificate_arn": "arn:aws:acm:us-east-1:253650698585:certificate/f2d274b0-2fe3-47eb-8558-4cae3e9b7502",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:targetgroup/nurlan-yagublu-dev-tg/73f67f52216c2ea6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:listener/app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab/c8782bc4a0b87ad8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:loadbalancer/app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-alb-listener-https",
              "Project": "nurlan-yagublu",
              "Type": "ALBListener",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-alb-listener-https",
              "Project": "nurlan-yagublu",
              "Type": "ALBListener",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_lb.main",
            "module.ecs.aws_lb_target_group.app",
            "module.networking.aws_security_group.alb",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.route53.aws_acm_certificate.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:253650698585:targetgroup/nurlan-yagublu-dev-tg/73f67f52216c2ea6",
            "arn_suffix": "targetgroup/nurlan-yagublu-dev-tg/73f67f52216c2ea6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:253650698585:targetgroup/nurlan-yagublu-dev-tg/73f67f52216c2ea6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:253650698585:loadbalancer/app/nurlan-yagublu-dev-alb/3ca31ddbd9a432ab"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nurlan-yagublu-dev-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-target-group",
              "Project": "nurlan-yagublu",
              "Type": "ALBTargetGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-target-group",
              "Project": "nurlan-yagublu",
              "Type": "ALBTargetGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04743f2af690174b4",
            "arn": "arn:aws:ec2:us-east-1:253650698585:elastic-ip/eipalloc-04743f2af690174b4",
            "association_id": "eipassoc-0a689993cc357161a",
            "domain": "vpc",
            "id": "eipalloc-04743f2af690174b4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03aad9222dd7a9863",
            "private_dns": "ip-10-0-1-89.ec2.internal",
            "private_ip": "10.0.1.89",
            "public_dns": "ec2-44-210-204-171.compute-1.amazonaws.com",
            "public_ip": "44.210.204.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-nat-eip-1",
              "Project": "nurlan-yagublu",
              "Type": "ElasticIP",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-nat-eip-1",
              "Project": "nurlan-yagublu",
              "Type": "ElasticIP",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c8b952e8c56bf35",
            "arn": "arn:aws:ec2:us-east-1:253650698585:elastic-ip/eipalloc-05c8b952e8c56bf35",
            "association_id": "eipassoc-0344abea38fd8a2ab",
            "domain": "vpc",
            "id": "eipalloc-05c8b952e8c56bf35",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09bb2bce5eb1ddf82",
            "private_dns": "ip-10-0-2-80.ec2.internal",
            "private_ip": "10.0.2.80",
            "public_dns": "ec2-52-21-141-255.compute-1.amazonaws.com",
            "public_ip": "52.21.141.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-nat-eip-2",
              "Project": "nurlan-yagublu",
              "Type": "ElasticIP",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-nat-eip-2",
              "Project": "nurlan-yagublu",
              "Type": "ElasticIP",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:internet-gateway/igw-0124a29469a5fdde8",
            "id": "igw-0124a29469a5fdde8",
            "owner_id": "253650698585",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-igw",
              "Project": "nurlan-yagublu",
              "Type": "InternetGateway",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-igw",
              "Project": "nurlan-yagublu",
              "Type": "InternetGateway",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04743f2af690174b4",
            "association_id": "eipassoc-0a689993cc357161a",
            "connectivity_type": "public",
            "id": "nat-09870d446f8c22bb0",
            "network_interface_id": "eni-03aad9222dd7a9863",
            "private_ip": "10.0.1.89",
            "public_ip": "44.210.204.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-082d4f58bbdd5bee4",
            "tags": {
              "AZ": "us-east-1a",
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-nat-gateway-1",
              "Project": "nurlan-yagublu",
              "Type": "NATGateway",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-nat-gateway-1",
              "Project": "nurlan-yagublu",
              "Type": "NATGateway",
              "owner": "nurlan.yagublu@nixs.com"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c8b952e8c56bf35",
            "association_id": "eipassoc-0344abea38fd8a2ab",
            "connectivity_type": "public",
            "id": "nat-0365afe08048e282e",
            "network_interface_id": "eni-09bb2bce5eb1ddf82",
            "private_ip": "10.0.2.80",
            "public_ip": "52.21.141.255",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-098a63593f409e4c7",
            "tags": {
              "AZ": "us-east-1b",
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-nat-gateway-2",
              "Project": "nurlan-yagublu",
              "Type": "NATGateway",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-nat-gateway-2",
              "Project": "nurlan-yagublu",
              "Type": "NATGateway",
              "owner": "nurlan.yagublu@nixs.com"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:route-table/rtb-01eebac6894e781cf",
            "id": "rtb-01eebac6894e781cf",
            "owner_id": "253650698585",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09870d446f8c22bb0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-private-app-rt-1",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "RouteTable",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-private-app-rt-1",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "RouteTable",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:route-table/rtb-02255d9117576a2d8",
            "id": "rtb-02255d9117576a2d8",
            "owner_id": "253650698585",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0365afe08048e282e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-private-app-rt-2",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "RouteTable",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-private-app-rt-2",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "RouteTable",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:route-table/rtb-0e1d13388e685e771",
            "id": "rtb-0e1d13388e685e771",
            "owner_id": "253650698585",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-private-db-rt",
              "Project": "nurlan-yagublu",
              "Tier": "Database",
              "Type": "RouteTable",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-private-db-rt",
              "Project": "nurlan-yagublu",
              "Tier": "Database",
              "Type": "RouteTable",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:route-table/rtb-084aa37bb00549abe",
            "id": "rtb-084aa37bb00549abe",
            "owner_id": "253650698585",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0124a29469a5fdde8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-public-rt",
              "Project": "nurlan-yagublu",
              "Tier": "Public",
              "Type": "RouteTable",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-public-rt",
              "Project": "nurlan-yagublu",
              "Tier": "Public",
              "Type": "RouteTable",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d01ee4f609d916b2",
            "route_table_id": "rtb-01eebac6894e781cf",
            "subnet_id": "subnet-0f71f2ceae447ff73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033c8085fd926a395",
            "route_table_id": "rtb-02255d9117576a2d8",
            "subnet_id": "subnet-08966b4d73842fc3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051b684f56f6a0ee8",
            "route_table_id": "rtb-0e1d13388e685e771",
            "subnet_id": "subnet-0f0ff242319155b99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private_db",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006a3ba536f58bca1",
            "route_table_id": "rtb-0e1d13388e685e771",
            "subnet_id": "subnet-01f1d722b2929755d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private_db",
            "module.networking.aws_subnet.private_db",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061c3984312aadec7",
            "route_table_id": "rtb-084aa37bb00549abe",
            "subnet_id": "subnet-082d4f58bbdd5bee4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059cd3a0cb9fa5071",
            "route_table_id": "rtb-084aa37bb00549abe",
            "subnet_id": "subnet-098a63593f409e4c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:security-group/sg-004474a7b1b889481",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004474a7b1b889481",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nurlan-yagublu-alb-sg",
            "name_prefix": "",
            "owner_id": "253650698585",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-alb-sg",
              "Project": "nurlan-yagublu",
              "Tier": "LoadBalancer",
              "Type": "SecurityGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-alb-sg",
              "Project": "nurlan-yagublu",
              "Tier": "LoadBalancer",
              "Type": "SecurityGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:security-group/sg-077bf51a4b48f4e48",
            "description": "Security group for ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077bf51a4b48f4e48",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004474a7b1b889481"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "nurlan-yagublu-ecs-sg",
            "name_prefix": "",
            "owner_id": "253650698585",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-ecs-sg",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "SecurityGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-ecs-sg",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "SecurityGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:security-group/sg-069a41fe08d6df7a5",
            "description": "Security group for RDS database",
            "egress": [],
            "id": "sg-069a41fe08d6df7a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077bf51a4b48f4e48"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "nurlan-yagublu-rds-sg",
            "name_prefix": "",
            "owner_id": "253650698585",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-rds-sg",
              "Project": "nurlan-yagublu",
              "Tier": "Database",
              "Type": "SecurityGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-rds-sg",
              "Project": "nurlan-yagublu",
              "Tier": "Database",
              "Type": "SecurityGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.alb",
            "module.networking.aws_security_group.ecs",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:security-group/sg-0cfb41e76b8986a92",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfb41e76b8986a92",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.20.0/24"
                ],
                "description": "HTTPS from private subnets",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nurlan-yagublu-vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "253650698585",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-vpc-endpoints-sg",
              "Project": "nurlan-yagublu",
              "Tier": "VPCEndpoints",
              "Type": "SecurityGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-vpc-endpoints-sg",
              "Project": "nurlan-yagublu",
              "Tier": "VPCEndpoints",
              "Type": "SecurityGroup",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:subnet/subnet-0f71f2ceae447ff73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f71f2ceae447ff73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253650698585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-private-app-subnet-1",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "PrivateSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-private-app-subnet-1",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "PrivateSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:subnet/subnet-08966b4d73842fc3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08966b4d73842fc3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253650698585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-private-app-subnet-2",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "PrivateSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-private-app-subnet-2",
              "Project": "nurlan-yagublu",
              "Tier": "Application",
              "Type": "PrivateSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:subnet/subnet-0f0ff242319155b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0ff242319155b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253650698585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-private-db-subnet-1",
              "Project": "nurlan-yagublu",
              "Tier": "Database",
              "Type": "PrivateSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-private-db-subnet-1",
              "Project": "nurlan-yagublu",
              "Tier": "Database",
              "Type": "PrivateSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:subnet/subnet-01f1d722b2929755d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f1d722b2929755d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "253650698585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-private-db-subnet-2",
              "Project": "nurlan-yagublu",
              "Tier": "Database",
              "Type": "PrivateSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-private-db-subnet-2",
              "Project": "nurlan-yagublu",
              "Tier": "Database",
              "Type": "PrivateSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:subnet/subnet-082d4f58bbdd5bee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082d4f58bbdd5bee4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253650698585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-public-subnet-1",
              "Project": "nurlan-yagublu",
              "Tier": "Public",
              "Type": "PublicSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-public-subnet-1",
              "Project": "nurlan-yagublu",
              "Tier": "Public",
              "Type": "PublicSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:subnet/subnet-098a63593f409e4c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098a63593f409e4c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253650698585",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-public-subnet-2",
              "Project": "nurlan-yagublu",
              "Tier": "Public",
              "Type": "PublicSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-public-subnet-2",
              "Project": "nurlan-yagublu",
              "Tier": "Public",
              "Type": "PublicSubnet",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "vpc_id": "vpc-070cab3b44e064fa9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:253650698585:vpc/vpc-070cab3b44e064fa9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0738576aee631e95a",
            "default_route_table_id": "rtb-0b2a9afa0274c7057",
            "default_security_group_id": "sg-0e2418edf6af8d450",
            "dhcp_options_id": "dopt-0dfc30f549f1ab0c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070cab3b44e064fa9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2a9afa0274c7057",
            "owner_id": "253650698585",
            "tags": {
              "CostCenter": "development",
              "Environment": "dev",
              "Name": "nurlan-yagublu-vpc",
              "Project": "nurlan-yagublu",
              "Type": "VPC",
              "owner": "nurlan.yagublu@nixs.com"
            },
            "tags_all": {
              "CostCenter": "development",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "nurlan-yagublu-vpc",
              "Project": "nurlan-yagublu",
              "Type": "VPC",
              "owner": "nurlan.yagublu@nixs.com"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}